[package]
name = "minidav"
version = "1.4.1"
edition = "2021"
authors = ["Philippe TEMESI"]
description = "Minimal WebDAV server with Locking and Range support (Stable)"

[dependencies]
tiny_http = "0.12"
getopts = "0.2"
base64 = "0.22"
percent-encoding = "2.3"
sha2 = "0.10"
hex = "0.4"
chrono = "0.4"
libc = "0.2"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
split-debuginfo = "packed"
strip = true
incremental = true
